# rinha-de-backend-2025

./: .gitignore
payment-consumer/src/: main.rs
rinhudos-backend-2025/: Cargo.toml  docker-compose.yml
rinhudos-backend-2025/api/: Dockerfile
rinhudos-backend-2025/orchestrator/: Dockerfile
rinhudos-backend-2025/src/: main.rs
